--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-single-1
-          environment_name: docker-single-1-dev
+          application_name: docker-single
+          environment_name: Docker-single-env
           existing_bucket_name: elasticbeanstalk-eu-north-1-050425011313
           region: eu-north-1
           version_label: ${{ github.sha }}
